[workspace]
members = [
    "bench",
    "common",
    "scenarium",
    "prism",
    "imaginarium",
    "palantir",
    "lumos"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unused_imports = "allow"


[workspace.dependencies]
common = { path = "common" }
bench = { path = "bench" }
scenarium = { path = "scenarium" }
prism = { path = "prism" }
imaginarium = { path = "imaginarium" }
palantir = { path = "palantir" }

# wgpu version should be in sync with egui
wgpu = { version = "27.0", features = ["metal", "vulkan", "dx12"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "persistence", "wgpu", "wayland"] }
egui = { version = "0.33", default-features = false, features = ["default_fonts", "rayon", "serde"] }

# gh repo recommends using development version
fitsio = { git = "https://github.com/simonrw/rust-fitsio", features = ["fitsio-src", "src-cmake"] }

libraw-rs-sys = { version = "*" }

serde = { version = "*", features = ["derive", "rc"] }
serde_json = { version = "*" }
uuid = { version = "*", features = ["v4", "serde"] }
anyhow = { version = "*" }
thiserror = { version = "*" }
bytemuck = { version = "*", features = ["derive", "extern_crate_alloc"] }
pollster = { version = "*" }
glam = { version = "*", features = ["serde"] }
strum = { version = "*" }
strum_macros = { version = "*" }
rand = { version = "*" }
tokio = { version = "*", features = ["full"] }
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "time"] }
tracing-appender = { version = "*" }
tracing-rolling-file = { version = "*", features = ["non-blocking"] }
dotenv = { version = "*" }
rayon = { version = "*" }
toml = { version = "*" }
hashbrown = { version = "*", features = ["serde"] }
mlua = { version = "*", features = ["serialize", "send", "anyhow", "async", "lua54", "vendored"] }
syn = { version = "*", features = ["full"] }
quote = { version = "*" }
memmap2 = { version = "*" }
tiff = { version = "*" }
image = { version = "*" }
paste = { version = "*" }
atomic_refcell = { version = "*" }
arc-swap = { version = "*" }
sysinfo = { version = "*" }
bumpalo = { version = "*", features = ["collections", "allocator-api2"] }
lz4_flex = { version = "*", features = ["std"] }
bitcode = { version = "*", features = ["serde"] }
rfd = { version = "*" }
async-trait = { version = "*" }
aligned-vec = { version = "*" }
arrayvec = { version = "*" }
smallvec = { version = "*" }
parking_lot = { version = "*" }
rand_chacha = { version = "*" }
nalgebra = { version = "*" }


[profile.bench]
debug = true
strip = "none"
split-debuginfo = "off"

[profile.release]
debug = true
strip = "none"
split-debuginfo = "off"


# Optimize heavy dependencies even in dev/test builds
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.wgpu-core]
opt-level = 3
[profile.dev.package.wgpu-hal]
opt-level = 3
[profile.dev.package.wgpu-types]
opt-level = 3
[profile.dev.package.naga]
opt-level = 3
[profile.dev.package.gpu-alloc]
opt-level = 3
[profile.dev.package.gpu-descriptor]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.tiff]
opt-level = 3
[profile.dev.package.spirv]
opt-level = 3
[profile.dev.package.ash]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.ravif]
opt-level = 3
[profile.dev.package.rav1e]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3
