[workspace]
members = [
    "common",
    "scenarium",
    "darkroom",
    "lens",
    "lumos"
]
default-members = ["darkroom"]
exclude = [".tmp", "palantir"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unused_imports = "allow"


[workspace.dependencies]
common = { path = "common" }
quickbench = { path = "quickbench" }
scenarium = { path = "scenarium" }
darkroom = { path = "darkroom" }
imaginarium = { path = "imaginarium", features = ["wgpu"] }
lens = { path = "lens" }
palantir = { path = "palantir" }

wgpu = { version = "29.0", features = ["metal", "vulkan", "dx12"] }

# gh repo recommends using development version
fitsio = { git = "https://github.com/simonrw/rust-fitsio", features = ["fitsio-src", "src-cmake"] }

libraw-rs-sys = { version = "0.0.4" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
bytemuck = { version = "1.25", features = ["derive", "extern_crate_alloc"] }
pollster = { version = "0.4" }
glam = { version = "0.33", features = ["serde"] }
strum = { version = "0.28" }
strum_macros = { version = "0.28" }
rand = { version = "0.10" }
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = { version = "0.2" }
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }
dotenv = { version = "0.15" }
rayon = { version = "1.12" }
toml = { version = "1.1" }
hashbrown = { version = "0.17", features = ["serde"] }
rhai = { version = "1.24", features = ["sync", "serde"] }
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
memmap2 = { version = "0.9" }
tiff = { version = "0.11" }
image = { version = "0.25" }
paste = { version = "1.0" }
atomic_refcell = { version = "0.1" }
arc-swap = { version = "1.9" }
sysinfo = { version = "0.39" }
bumpalo = { version = "3.20", features = ["collections", "allocator-api2"] }
lz4_flex = { version = "0.13", features = ["std"] }
bitcode = { version = "0.6", features = ["serde"] }
rfd = { version = "0.17" }
async-trait = { version = "0.1" }
aligned-vec = { version = "0.6" }
arrayvec = { version = "0.7", features = ["serde"] }
smallvec = { version = "1.15" }
parking_lot = { version = "0.12" }
rand_chacha = { version = "0.10" }
nalgebra = { version = "0.34" }
ryu = { version = "1.0" }
ratatui = { version = "0.30" }
crossterm = { version = "0.29" }
clap = { version = "4.6", features = ["derive"] }


[profile.bench]
debug = true
strip = "none"
split-debuginfo = "off"

[profile.release]
debug = true
strip = "none"
split-debuginfo = "off"


# Optimize heavy dependencies even in dev/test builds
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.wgpu-core]
opt-level = 3
[profile.dev.package.wgpu-hal]
opt-level = 3
[profile.dev.package.wgpu-types]
opt-level = 3
[profile.dev.package.naga]
opt-level = 3
[profile.dev.package.gpu-descriptor]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.tiff]
opt-level = 3
[profile.dev.package.spirv]
opt-level = 3
[profile.dev.package.ash]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.ravif]
opt-level = 3
[profile.dev.package.rav1e]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3
