[workspace]
members = [
    "common",
    "scenarium",
    "darkroom",
    "lens",
    "lumos",
    "imaginarium",
    "quickbench",
    "palantir",
    "fits-well"
]
default-members = ["darkroom"]
exclude = [".tmp"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
common = { path = "common" }
quickbench = { path = "quickbench" }
scenarium = { path = "scenarium" }
darkroom = { path = "darkroom" }
imaginarium = { path = "imaginarium", features = ["wgpu"] }
lens = { path = "lens" }
lumos = { path = "lumos" }
palantir = { path = "palantir" }
fits-well = { path = "fits-well" }

wgpu = { version = "29.0", features = ["metal", "vulkan", "dx12"] }

libraw-rs-sys = { version = "0.0.4" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
schemars = { version = "1" }
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
bytemuck = { version = "1.25", features = ["derive", "extern_crate_alloc"] }
pollster = { version = "0.4" }
glam = { version = "0.33", features = ["serde"] }
strum = { version = "0.28" }
strum_macros = { version = "0.28" }
rand = { version = "0.10" }
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1" }
# No "time" feature: 0.3.23's blanket `From<S: AsRef<str>> for EnvFilter`
# fails coherence against the time crate on rustc 1.96 (E0119); the
# built-in datetime fallback still prints RFC3339. Restore once fixed.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = { version = "0.2" }
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }
dotenv = { version = "0.15" }
rayon = { version = "1.12" }
toml = { version = "1.1" }
hashbrown = { version = "0.17", features = ["serde"] }
rhai = { version = "1.25", features = ["sync", "serde"] }
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
memmap2 = { version = "0.9" }
tiff = { version = "0.11" }
image = { version = "0.25" }
paste = { version = "1.0" }
atomic_refcell = { version = "0.1" }
arc-swap = { version = "1.9" }
sysinfo = { version = "0.39" }
bumpalo = { version = "3.20", features = ["collections", "allocator-api2"] }
lz4_flex = { version = "0.13", features = ["std"] }
bitcode = { version = "0.6", features = ["serde"] }
dark-light = { version = "2.0" }
rfd = { version = "0.17" }
async-trait = { version = "0.1" }
aligned-vec = { version = "0.6" }
arrayvec = { version = "0.7", features = ["serde"] }
smallvec = { version = "1.15" }
parking_lot = { version = "0.12" }
rand_chacha = { version = "0.10" }
nalgebra = { version = "0.35" }
ryu = { version = "1.0" }
ratatui = { version = "0.30" }
crossterm = { version = "0.29" }
clap = { version = "4.6", features = ["derive"] }
ort = { version = "2.0.0-rc.12" }


[profile.bench]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release]
debug = true
opt-level = 3
strip = "none"
split-debuginfo = "off"
lto = "thin"

[profile.release-max]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false


# Optimize heavy dependencies even in dev/test builds
[profile.dev.package.wgpu]
opt-level = 3
[profile.dev.package.wgpu-core]
opt-level = 3
[profile.dev.package.wgpu-hal]
opt-level = 3
[profile.dev.package.wgpu-types]
opt-level = 3
[profile.dev.package.naga]
opt-level = 3
[profile.dev.package.gpu-descriptor]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.tiff]
opt-level = 3
[profile.dev.package.spirv]
opt-level = 3
[profile.dev.package.ash]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.ravif]
opt-level = 3
[profile.dev.package.rav1e]
opt-level = 3
[profile.dev.package.nalgebra]
opt-level = 3
[profile.dev.package.half]
opt-level = 3
[profile.dev.package.exr]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.gif]
opt-level = 3
[profile.dev.package.qoi]
opt-level = 3
[profile.dev.package.lz4_flex]
opt-level = 3
[profile.dev.package.fits-well]
opt-level = 3
[profile.dev.package.libraw-rs-sys]
opt-level = 3
[profile.dev.package.cosmic-text]
opt-level = 3
[profile.dev.package.swash]
opt-level = 3
[profile.dev.package.fontdb]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package."owned_ttf_parser"]
opt-level = 3
[profile.dev.package.font-types]
opt-level = 3
[profile.dev.package.read-fonts]
opt-level = 3
[profile.dev.package.skrifa]
opt-level = 3
