[package]
name = "nodeshop"
version = "0.1.0"
edition = "2021"

[features]
default = []
opencl = ["graph_lib/opencl"]

[dependencies]
graph_lib = { path = "../Graph", package = "graph" }
egui_node_graph = { path = "../../egui_node_graph/egui_node_graph" }

egui_file = "*"
eframe = { version = "*", features = ["wgpu"] }

serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
