[package]
name = "editor"
version = "0.1.0"
edition = "2021"


[features]
default = []

[dependencies]
uilib = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
graph_lib = { workspace = true }
egui_node_graph = { workspace = true }
egui_file = { workspace = true }
eframe = { workspace = true }