[package]
name = "editor"
version = "0.1.0"
edition = "2021"


[features]
wgpu = ["graph_lib/wgpu"]
default = ["wgpu"]

[dependencies]
common = { workspace = true }

uilib = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
graph_lib = { workspace = true }
egui_node_graph = { workspace = true }
egui_file = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
