[package]
name = "imaginarium"
version = "0.1.0"
edition = "2021"

[features]
default = ["wgpu"]

[dependencies]
tiff =  { workspace = true }
png =  { workspace = true }
image =  { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
