[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
aligned-vec = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mlua = { workspace = true }
bumpalo = { workspace = true }
bitcode = { workspace = true }
toml = { workspace = true }
lz4_flex = { workspace = true }
arc-swap = { workspace = true }
ryu = { workspace = true }
