[package]
name = "common"
version.workspace = true
edition.workspace = true

[features]
# Exposes test-only helpers (e.g. `SerdeFormat::all_formats_for_testing`) to
# downstream crates' test targets without putting them in the released surface.
test-support = []

[dependencies]
common-derive = { path = "common-derive" }
aligned-vec = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rhai = { workspace = true }
bitcode = { workspace = true }
toml = { workspace = true }
lz4_flex = { workspace = true }
arc-swap = { workspace = true }
ryu = { workspace = true }
