[package]
name = "common"
version.workspace = true
edition.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints]
workspace = true

[features]
# Exposes test-only helpers (e.g. `SerdeFormat::all_formats_for_testing`) to
# downstream crates' test targets without putting them in the released surface.
internals = []
introspect-derive = ["dep:common-derive"]

[dependencies]
common-derive = { path = "common-derive", optional = true }
glam = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
toml = { workspace = true }
lz4_flex = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
common-derive = { path = "common-derive" }
