[package]
name = "darkroom-egui"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
scenarium = { workspace = true }
imaginarium = { workspace = true }
lens = { workspace = true }


# wgpu version should be in sync with egui
wgpu = { version = "29.0", features = ["metal", "vulkan", "dx12"] }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "persistence", "wgpu", "wayland"] }
egui = { version = "0.34", default-features = false, features = ["default_fonts", "rayon", "serde"] }

anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rhai = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-appender = { workspace = true }
hashbrown = { workspace = true }
lz4_flex = { workspace = true }
rfd = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
