[package]
name = "darkroom"
version.workspace = true
edition.workspace = true

[dependencies]
palantir = { workspace = true }
scenarium = { workspace = true }
common = { workspace = true }
lens = { workspace = true }

glam = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }

[features]
# Forward palantir's tracy backend so `cargo run -p darkroom --features
# profile-with-tracy` lights up zones across both crates against a single
# tracy-client connection (palantir centralises the `tracy-client` dep
# so the FFI singleton stays unique).
profile-with-tracy = ["palantir/profile-with-tracy"]
