[package]
name = "darkroom"
version.workspace = true
edition.workspace = true

[dependencies]
palantir = { workspace = true }
scenarium = { workspace = true }
common = { workspace = true }
lens = { workspace = true }
imaginarium = { workspace = true }

glam = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
dark-light = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }

# Scripting-over-TCP transport (`src/script/`): a sandboxed Rhai executor
# fed by a length-prefixed, lz4-framed TCP protocol. Off unless `--script-tcp`.
rhai = { workspace = true }
lz4_flex = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["test-support"] }

[features]
# Forward palantir's tracy backend so `cargo run -p darkroom --features
# profile-with-tracy` lights up zones across both crates against a single
# tracy-client connection (palantir centralises the `tracy-client` dep
# so the FFI singleton stays unique).
profile-with-tracy = ["palantir/profile-with-tracy"]
